crates/jsonschema-macros/tests/ui/duplicate_path_attribute.stderr
error: Duplicate attribute: `path`
 --> tests/ui/duplicate_path_attribute.rs:1:44
  |
1 | #[jsonschema::validator(path = "one.json", path = "two.json")]
  |                                            ^^^^
